# motmot

./: Cargo.toml  README.md  TODO  server.cert  server.key
src/: app.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs
src/action/: error.rs  mod.rs  response.rs  static_file.rs
src/app/: error.rs  health.rs  mod.rs  runtime.rs  servers.rs
src/config/: action.rs  health.rs  logging.rs  mod.rs  route.rs  server.rs  standard.rs
src/connection/: accept_loop.rs  error.rs  mod.rs  tls.rs
src/features/: mod.rs
src/features/caching/: mod.rs
src/features/health/: error.rs  mod.rs  ports.rs  tls.rs
src/features/proxy/: error.rs
src/features/scripting/: mod.rs
src/h3/: error.rs  mod.rs
src/health/: mod.rs  ports.rs  tls.rs
src/helpers/: fs.rs  mime.rs  mod.rs
src/http/request/: error.rs  mod.rs
src/http/response/: error.rs  mod.rs
src/logging/: default_logging.rs  error.rs  mod.rs  systemd_logging.rs
src/net/: mod.rs
src/net/h3/: error.rs  mod.rs
src/net/quic/: accept_loop.rs  error.rs  mod.rs
src/net/tls/: error.rs  mod.rs
src/net/webtransport/: error.rs  mod.rs
src/proxy/: error.rs  mod.rs
src/request/: mod.rs
src/server/: config.rs  error.rs  fs.rs  h3.rs  mod.rs  quic.rs  request.rs
src/server/tls/: error.rs  mod.rs
src/tools/: fs.rs  mod.rs  path.rs  routing.rs
src/webtransport/: error.rs  mod.rs  session.rs
