[package]
name = "motmot"
version = "0.1.0"
edition = "2024"
description = "A simple http server in rust"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
app-base = { git = "https://github.com/takashialpha/app-base.git" }
aws-lc-rs = "1.15.2"
bytes = "1.11.0"
dirs = "6.0.0"
futures = "0.3.31"
h3 = { version = "0.0.8", features = ["tracing"] }
h3-datagram = "0.0.2"
h3-quinn = { version = "0.0.10", features = ["tracing", "datagram"] }
h3-webtransport = "0.1.2"
http = "1.4.0"
octets = "0.3.4"
once_cell = "1.21.3"
quinn = { version = "0.11.9", features = ["runtime-tokio", "rustls"] }
rcgen = "0.14.6"
rustls = { version = "0.23.35", features = ["logging", "aws-lc-rs", "std"] }
rustls-native-certs = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = { version = "0.6.1", features = ["all"] }
structopt = "0.3.26"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [
  "fmt",
  "ansi",
  "env-filter",
  "time",
  "tracing-log",
  "local-time",
] }
tracing-tree = "0.4.1"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false
